--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>Chess Engine!!</h1>
+<div class="customBody">
+    <h1>Chess Engine!!</h1>
+    <component-game-home></component-game-home>
+</div>
