Basic Functions, FilesBoard, RanksBoard

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="customBody">
-    <h1>Chess Engine!!</h1>
+    <h1>IITM-Chess Portal!!</h1>
     <component-game-home></component-game-home>
 </div>
